About page edited

--- a/sozluk/templates/sozluk/about.html
+++ b/sozluk/templates/sozluk/about.html
@@ -9,7 +9,7 @@
 <div class="px-4 pt-3 pb-3 my-5 text-center">
     <h1 class="display-6 fw-bold">Girişimcilik Sözlüğü</h1>
     <div class="col-lg-6 mx-auto">
-      <p class="text-secondary fs-6 mb-4">Girişimcilik Sözlüğü, Diici tarafından 2020 yılında girişimcilik ekosisteminde sıklıkla karşılaştığımız girişimcilik terimlerini herkese daha ulaşılabilir kılmak için oluşturulmuş bir projedir.</p>
+      <p class="text-secondary fs-6 mb-4">Girişimcilik Sözlüğü, liseli ve üniversiteli gençlerin emekleri ile girişimcilik ekosisteminde sıklıkla karşılaşılan girişimcilik terimlerini herkese daha ulaşılabilir kılmak için oluşturulmuş bir projedir.</p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
         <a href="{% url 'index' %}" target="_blank" 
         rel="noreferrer noopener" class="btn btn-primary btn-lg btn-sm px-3 py-2 text-white">Görüntüle</a>
@@ -17,8 +17,7 @@
     </div>
 </div>
 
-
-<!--Girişimcilik Sözlüğü Tanım-->
+<!-- 
 <div class="container col-xxl-8 px-4 pb-3">
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
       <div class="col-10 col-sm-8 col-lg-6">
@@ -34,8 +33,9 @@
       </div>
     </div>
 </div>
+-->
 
-<!--Diici Tanım-->
+<!--TEINN Tanım-->
 <div class="container col-xxl-8 px-4 py-5">
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
       <div class="col-lg-6">
@@ -52,5 +52,25 @@
 
     </div>
 </div>
+
+<!--Colinn Tanım-->
+<div class="container col-xxl-8 px-4 py-5">
+  <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+    <div class="col-10 col-sm-8 col-lg-6">
+      <img src="{% static 'img/colinn-logo.png' %}" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+    </div>
+    <div class="col-lg-6">
+      <h1 class="display-6 fw-bold lh-1 mb-3" style="color: #CF1417;">Colleges In Innovation</h1>
+      <p class="text-secondary fs-6">Üniversitelilerin girişimcilik ekosisteminde yaratabileceği etkinin gücüne inanıyor ve bu ekosistemi geliştirmek için girişimcilik ve startup yatırımcılığı odağında çalışmalar gerçekleştiriyoruz!</p>
+      <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+          <a href="https://www.teinn.org/" target="_blank" 
+          rel="noreferrer noopener" class="btn btn-lg btn-sm px-3 py-2 text-white" style="background-color: #CF1417;">Görüntüle</a>
+      </div>
+    </div>
+    
+
+  </div>
+</div>
+
 
 {% endblock content %}
