--- a/sozluk/templates/sozluk/about.html
+++ b/sozluk/templates/sozluk/about.html
@@ -63,7 +63,7 @@
       <h1 class="display-6 fw-bold lh-1 mb-3" style="color: #CF1417;">Colleges In Innovation</h1>
       <p class="text-secondary fs-6">Üniversitelilerin girişimcilik ekosisteminde yaratabileceği etkinin gücüne inanıyor ve bu ekosistemi geliştirmek için girişimcilik ve startup yatırımcılığı odağında çalışmalar gerçekleştiriyoruz!</p>
       <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-          <a href="https://www.teinn.org/" target="_blank" 
+          <a href="https://www.colinn.org/" target="_blank" 
           rel="noreferrer noopener" class="btn btn-lg btn-sm px-3 py-2 text-white" style="background-color: #CF1417;">Görüntüle</a>
       </div>
     </div>
